# Bondify

./: README.md
BloomFilter/: CMakeLists.txt  Dockerfile
BloomFilter/src/: AddUrl.cpp  AddUrl.h  App.cpp  App.h  BloomFilter.cpp  BloomFilter.h  CheckUrl.cpp  CheckUrl.h  H1.cpp  H1.h  H2.cpp  H2.h  ICommand.h  IHash.cpp  IHash.h  TextFile2.txt  a.out  client.cpp  main.cpp  output  part1.cpp  tcp.cpp
BloomFilter/tests/: test1.cpp
backend/: app.js  errorHandler.js  package-lock.json  package.json
backend/__tests__/: article.js  user.js
backend/config/: .env.test
backend/controllers/: article.js  login.js  users.js
backend/public/: asset-manifest.json  index.html
backend/routes/: article.js  users.js
backend/services/: article.js  login.js  users.js
backend/wiki/: react.md  settingUpTheProject.md
fronted/: package-lock.json  package.json
fronted/src/: App.js  index.js
fronted/src/Authentication/: AuthContext.js  InfoImage.js  LeftLogo.js  LogButttons.js  LogIn.js  LogInfo.js  MenuObject.js  Registration.js  RightScreen.js  SignScreen.js
fronted/src/Comment/: AddComment.js  Comment.js  CommentsSection.js  newCommentInfo.js
fronted/src/Feed/: Feed.js  MenuFeed.js  RoundedButton.js  TopScreen.js  TopScreenIcons.js  feed.css  leftMenuInfos.js
fronted/src/Friends/: Friend.js  FriendRequest.js  Friends.js  FriendsRequests.js
fronted/src/Post/: AddPost.js  PersonalBoxPost.js  Post.js  PostButtons.js  PostEditForm.js  PostHeader.js
fronted/src/_tests_/: App.test.js
fronted/src/services/: FriendReqService.js  PostService.js  SignUpService.js  (+3 more)
(+11 files in other folders)
